objects/QIDC__OneKey_User_Settings_ims__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Object used to store system parameters of the users.</description>
    <fields>
        <fullName>QIDC__Autocompletion_Search_ims__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This setting is used to set default status of Autocompletion search in simple search screen.</description>
        <inlineHelpText>This setting is used to set default status of Autocompletion search in simple search screen.</inlineHelpText>
        <label>Autocompletion Search</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QIDC__Download_Out_of_Contract_ims__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If enabled, Rep can able to download out of contract records. Else, can only download in contract records from search page.</description>
        <inlineHelpText>If enabled, Rep can able to download out of contract records. Else, can only download in contract records from search page.</inlineHelpText>
        <label>Download Out of Contract?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QIDC__In_my_Contract_ims__c</fullName>
        <defaultValue>false</defaultValue>
        <label>In my Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QIDC__Individual_Workplace_Access_ims__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Individual/Workplace access User setting.</description>
        <label>Individual/Workplace Access</label>
        <type>Checkbox</type>
    </fields>
    <label>OneKey User Settings</label>
</CustomObject>